--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,3 +1,24 @@
+.main-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-header {
+    button {
+        display: flex;
+    }
+}
+
+.main-header__logo {
+    text-transform: uppercase;
+}
+
 .main-header__nav__burger {
     height: 10em;
+}
+
+.main-header__nav__menu {
+    size: 1em;
+    text-transform: uppercase;
+    align-self: center;
 }
