--- a/scss/header.scss
+++ b/scss/header.scss
@@ -3,18 +3,29 @@
     justify-content: space-between;
 }
 
+.main-header__nav {
+    display: flex;
+}
+
 .main-header {
     button {
         display: flex;
+        border: none;
+        margin: 0;
+        text-decoration: none;
+        background-color: white;
+        align-content: center;
+        flex-direction: row;
     }
 }
+
 
 .main-header__logo {
     text-transform: uppercase;
 }
 
 .main-header__nav__burger {
-    height: 10em;
+    height: 2em;
 }
 
 .main-header__nav__menu {
