--- a/css/card.css
+++ b/css/card.css
@@ -57,19 +57,39 @@
 
 .card-list{
   display: grid;
-    grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
+  max-width: 80%;
+  grid-template-columns: 40% 40%;
+  grid-template-rows: 33% 33% 33%;
+  position: absolute;
 }
 
+.aside-list{
+  float: right;
+  position: relative;
+  max-width: 20%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+  color: #4A4A4A;
+}
 
 @media screen and (max-width: 800px) {
 
 .card-list{
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25% 25% 25% 25%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
     padding: 0.5em;
+    position: relative;
 }
-  
+
+.aside-list{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+  color: #4A4A4A;
+}  
 
 }
+
