--- a/css/styles.css
+++ b/css/styles.css
@@ -11,16 +11,17 @@
   margin: 0;
   text-decoration: none;
   background-color: white;
-  align-content: center;
   flex-direction: row; }
 
 .main-header__logo {
   text-transform: uppercase; }
 
 .main-header__nav__burger {
-  height: 2em; }
+  height: 2em;
+  align-self: center; }
 
 .main-header__nav__menu {
   size: 1em;
+  padding: 0 1em 0 1em;
   text-transform: uppercase;
   align-self: center; }
