fogot to commit, css to sass consolidation

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
   justify-content: space-between; }
 
 .main-header__nav {
-  display: flex; }
+  display: flex;
+  color: pink; }
 
 .main-header button {
   display: flex;
