--- a/scss/card.scss
+++ b/scss/card.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
-    max-width: 500px;
-    max-width: 500px;
+    max-width: 31.25rem;
+    max-width: 31.25rem;
   
   }
   
@@ -57,8 +57,8 @@
   
   .card-list{
     display: grid;
-    max-width: 80%;
-    grid-template-columns: 40% 40%;
+    max-width: 100%;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 33% 33% 33%;
     position: absolute;
   }
@@ -73,10 +73,20 @@
     color: #4A4A4A;
   }
   
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1380px) {
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    max-width: 100%;
+    max-width: 100%;
+  
+  }
   
   .card-list{
       display: grid;
+      max-width: 100%;
       grid-template-columns: 100%;
       grid-template-rows: 20% 20% 20% 20% 20%;
       padding: 0.5em;
@@ -85,6 +95,7 @@
   
   .aside-list{
     position: absolute;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     margin-left: 1rem;
