added sass text size S for footing headings news connect etc

--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -2,6 +2,7 @@ $font-color: #1E1E1E;
 
 $font-base: 1em;
 $font-text: $font-base*0.75;
+$font-S: $font-base*0.6875;
 $font-L: $font-base*1.125;
 $font-XL: $font-base*2;
 
