--- a/scss/card.scss
+++ b/scss/card.scss
@@ -75,9 +75,15 @@
 
   .cardAndAsideWrapper{
     position: relative; 
-    min-height: 170vh;
+    min-height: 200vh;
+  }
+
+  .footerWrapper{
+    position: relative; 
+    bottom: 0;
   }
   
+
   @media screen and (max-width: 1380px) {
 
   .card {
