--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,4 +1,14 @@
+.container {
+    margin: 0 auto;
+}
 footer {
+    display: block;
     border-top: 1px dotted silver;
     padding: 15px 0 55px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    min-wdith: 100%;
 }
