--- a/scss/mobile-overlay.scss
+++ b/scss/mobile-overlay.scss
@@ -1,7 +1,7 @@
 .mobile-overlay {
     position: absolute;
     right: 100%;
-    background-color: pink;
+    background-color: white;
 }
 
 .overlay {
@@ -9,5 +9,6 @@
     top: 0%;
     right: 0%;
     z-index: 2;
-    width: 100%;
+    min-width: 100%;
+    min-height: 100vh;
 }
