--- a/css/styles.css
+++ b/css/styles.css
@@ -136,4 +136,75 @@ h1 {
     margin-left: 1rem;
     color: #4A4A4A; } }
 
+.container {
+  margin: 0 auto; }
 
+footer {
+  display: block;
+  border-top: 1px dotted silver;
+  padding: 15px 0 55px; }
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 100%; }
+
+.footer-logo {
+  display: block;
+  float: left;
+  margin: 20px 20px 0 0; }
+
+.footer-logo img {
+  display: block;
+  height: 30px; }
+
+footer img {
+  margin: 20px 15px 0 0; }
+
+footer a, h2 a, header a {
+  border-bottom: none; }
+
+a {
+  text-decoration: none;
+  color: #1e1e1e;
+  cursor: pointer; }
+
+footer ul li {
+  list-style: none; }
+
+footer ul, footer ul li {
+  margin: 0;
+  padding: 0; }
+
+footer p .menu-title {
+  margin: 0 0 5px; }
+
+/*
+.col-xs-6 {
+    flex-basis: 50%;
+    max-width: 50%;
+}
+
+.col-sm-12 .col-lg-4{
+    position: relative;
+    flex: 0 0 auto;
+    flex-basis: 100%;
+    padding: 0 15px;
+    max-width: 100%;
+}
+*/
+footer p {
+  margin: 0 0 20px; }
+
+.mobile-overlay {
+  position: absolute;
+  right: 100%;
+  background-color: white; }
+
+.overlay {
+  position: fixed;
+  top: 0%;
+  right: 0%;
+  z-index: 2;
+  min-width: 100%;
+  min-height: 100vh; }
